SERVER-19068: treat NumberLong()/$numberLong as long long, always